feat: grouped equipment picker, instant user access, and database reset

--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
               </svg>
             </div>
             <h2 class="auth-form-title" style="color:var(--green);margin-top:12px">¡CUENTA CREADA!</h2>
-            <p style="color:var(--text2);font-size:13px;margin-bottom:20px;line-height:1.5">Tu solicitud fue enviada al
-              administrador.<br>Recibirás acceso cuando sea aprobada.</p>
+            <p style="color:var(--text2);font-size:13px;margin-bottom:20px;line-height:1.5">¡Tu cuenta está lista!<br>Ya
+              puedes iniciar sesión con tu usuario y contraseña.</p>
             <button class="auth-btn" onclick="toggleAuth('login')">IR A INICIAR SESIÓN</button>
           </div>
         </div>
